finish draft of thesis

--- a/reference.bib
+++ b/reference.bib
@@ -402,7 +402,7 @@ url={https://aclanthology.org/2022.findings-acl.23/}
     pages = "549--559",
 }
 % 33
-@inproceedings{ma-etal-2023-dreeam,
+@inproceedings{ma-etal-2023-DREEAM,
     title = "DREEAM: Guiding Attention with Evidence for Improving Document-Level Relation Extraction",
     author = "Ma, Youmi  and
       Wang, An  and
@@ -532,11 +532,23 @@ url={https://openreview.net/forum?id=Bkg6RiCqY7}
 }
 
 @inproceedings{qi2020stanza,
-    title={Stanza: A {Python} Natural Language Processing Toolkit for Many Human Languages},
-    author={Qi, Peng and Zhang, Yuhao and Zhang, Yuhui and Bolton, Jason and Manning, Christopher D.},
+    title = "{S}tanza: A Python Natural Language Processing Toolkit for Many Human Languages",
+    author = "Qi, Peng  and
+      Zhang, Yuhao  and
+      Zhang, Yuhui  and
+      Bolton, Jason  and
+      Manning, Christopher D.",
+    editor = "Celikyilmaz, Asli  and
+      Wen, Tsung-Hsien",
     booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics: System Demonstrations",
-    year={2020},
-url={https://aclanthology.org/2020.acl-demos.14/}
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.acl-demos.14",
+    doi = "10.18653/v1/2020.acl-demos.14",
+    pages = "101--108",
+    abstract = "We introduce Stanza, an open-source Python natural language processing toolkit supporting 66 human languages. Compared to existing widely used toolkits, Stanza features a language-agnostic fully neural pipeline for text analysis, including tokenization, multi-word token expansion, lemmatization, part-of-speech and morphological feature tagging, dependency parsing, and named entity recognition. We have trained Stanza on a total of 112 datasets, including the Universal Dependencies treebanks and other multilingual corpora, and show that the same neural architecture generalizes well and achieves competitive performance on all languages tested. Additionally, Stanza includes a native Python interface to the widely used Java Stanford CoreNLP software, which further extends its functionality to cover other tasks such as coreference resolution and relation extraction. Source code, documentation, and pretrained models for 66 languages are available at \url{https://stanfordnlp.github.io/stanza/}.",
 }
 
 @inproceedings{xu-etal-2021-discriminative,
