--- a/reference.bib
+++ b/reference.bib
@@ -139,7 +139,6 @@ url={https://openreview.net/forum?id=SJU4ayYgl}
     publisher = "The COLING 2016 Organizing Committee",
     pages = "1461--1470",
     abstract = "Nowadays, neural networks play an important role in the task of relation classification. By designing different neural architectures, researchers have improved the performance to a large extent in comparison with traditional methods. However, existing neural networks for relation classification are usually of shallow architectures (e.g., one-layer convolutional neural networks or recurrent networks). They may fail to explore the potential representation space in different abstraction levels. In this paper, we propose deep recurrent neural networks (DRNNs) for relation classification to tackle this challenge. Further, we propose a data augmentation method by leveraging the directionality of relations. We evaluated our DRNNs on the SemEval-2010 Task 8, and achieve an F1-score of 86.1{\%}, outperforming previous state-of-the-art recorded results.",
-url={https://arxiv.org/abs/1601.03651}
 }
 % 13
 @inproceedings{DOCRED,
@@ -233,7 +232,6 @@ url={https://link.springer.com/chapter/10.1007/978-3-030-17083-7_17}
   year={2020},
   volume={12084},
   pages={197 - 209},
-url={https://arxiv.org/abs/2003.12754}
 }
 % 20
 @inproceedings{Xu2020DocumentLevelRE,
@@ -322,12 +320,11 @@ url= {https://aclanthology.org/2022.emnlp-main.272/},
  author = {Gentile, Claudio and Warmuth, Manfred K. K},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {M. Kearns and S. Solla and D. Cohn},
- pages = {},
  publisher = {MIT Press},
  title = {Linear Hinge Loss and Average Margin},
 url={http://papers.neurips.cc/paper/1610-linear-hinge-loss-and-average-margin.pdf},
  volume = {11},
- pages = {225–231},
+ pages = {225--231},
  year = {1998}
 }
 % 27
@@ -483,8 +480,7 @@ url={https://aclanthology.org/2022.findings-emnlp.140/}
   journal={Advances in neural information processing systems},
   volume={32},
   year={2019},
-url={https://arxiv.org/abs/1912.01703}
-}
+  }
 
 @inproceedings{
 loshchilov2018decoupled,
@@ -507,7 +503,6 @@ url={https://openreview.net/forum?id=Bkg6RiCqY7}
                   Kaiming He},
   title        = {Accurate, Large Minibatch {SGD:} Training ImageNet in 1 Hour},
   journal      = {CoRR},
-  volume       = {abs/1706.02677},
   year         = {2017},
   eprinttype    = {arXiv},
   eprint       = {1706.02677},
@@ -521,7 +516,6 @@ url={https://openreview.net/forum?id=Bkg6RiCqY7}
   booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
   pages={7482--7491},
   year={2018},
-    url={https://arxiv.org/abs/1705.07115}
 }
 
 @inproceedings{qi2020stanza,
@@ -762,7 +756,6 @@ url={https://openreview.net/forum?id=Sye0lZqp6Q}
   title        = {Fine-tune Bert for DocRED with Two-step Process},
   journal      = {CoRR},
   year         = {2019},
-  url          = {http://arxiv.org/abs/1909.11898},
   eprinttype    = {arXiv},
   eprint       = {1909.11898},
   timestamp    = {Tue, 16 May 2023 16:54:39 +0200},
@@ -868,7 +861,6 @@ DOI = {10.3390/app12031599}
   author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, Łukasz and Polosukhin, Illia},
   biburl = {https://www.bibsonomy.org/bibtex/26c1129dc79583078fb0409fc7efda6aa/annakrause},
   description = {Aktuelleres Paper zur Verwendung von Attention für die Neural Machine Translation},
-  ee = {http://arxiv.org/abs/1706.03762},
   interhash = {b23d83da70543e00f9240cc009f1fcfa},
   intrahash = {6c1129dc79583078fb0409fc7efda6aa},
   journal = {CoRR},
@@ -877,8 +869,6 @@ DOI = {10.3390/app12031599}
   timestamp = {2020-01-09T12:02:01.000+0100},
   title = {Attention Is All You Need},
   pages = {21-25},
-  url = {http://arxiv.org/abs/1706.03762},
-  volume = {abs/1706.03762},
   year = 2017
 }
 
