--- a/main_w_translation.tex
+++ b/main_w_translation.tex
@@ -19,7 +19,7 @@
     它需要处理多个句子并对这些句子进行推理。
     最先进的文档级关系抽取使用图形结构来连接文档中的实体，来捕获文档中的实体对的交互。
     但是这些方法没有充分利用在句子级关系抽取中被充分研究的语法信息。
-    在本文中我们将语法树融合到文档级关系抽取中，重点研究了使用依赖语法树，依存语法树进行文档级关系抽取算法，以及调整依赖语法树和依存语法树在文档级关系抽取中权重的问题。
+    在本文中我们将语法树融合到文档级关系抽取中，重点研究了使用依赖语法树，依存语法树进行文档级关系抽取的算法，以及调整依赖语法树和依存语法树在文档级关系抽取中权重的问题。
     我们利用依存语法树来聚合整个句子信息，并为目标实体对选择有指导意义的句子。
     同时我们利用依赖语法树对整个文档进行细粒度的分析，并选择其中重要的单词增强目标实体对的信息。
     文档级关系抽取将同时利用依赖语法树和依存语法树进行预测。
